fix bottom page-nav, box project cards, spacing between cards

--- a/styles/overrides.scss
+++ b/styles/overrides.scss
@@ -10,22 +10,22 @@
   }
 }
 
-/* for internet explorer */
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  .card {
-    .corner-tag {
-      &.high {
-        background: url('/assets/img/corner-tags/high.svg');
-      }
-      &.medium {
-        background: url('/assets/img/corner-tags/medium.svg');
-      }
-      &.low {
-        background: url('/assets/img/corner-tags/low.svg');
-      }
-    }
-  }
-}
+// /* for internet explorer */
+// @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+//   .card {
+//     .corner-tag {
+//       &.high {
+//         background: url('/assets/img/corner-tags/high.svg');
+//       }
+//       &.medium {
+//         background: url('/assets/img/corner-tags/medium.svg');
+//       }
+//       &.low {
+//         background: url('/assets/img/corner-tags/low.svg');
+//       }
+//     }
+//   }
+// }
 
 // overriding the default uswds search box behavior
 [type='search'] {
